--- a/index.html
+++ b/index.html
@@ -62,13 +62,16 @@
                 </p>
             </div>
         </div>
-        <p class="quote">
-            This is an inspiring quote, or a testimonial from a
-            customer. Maybe it's just filling up space, or maybe
-            people will actually read it. Who knows? All i know
-            is that it looks nice.
-        </p>
-        <p class="author">-Thor, God of Thunder</p>
+        <div class="quote-container">
+            <p class="quote">
+                This is an inspiring quote, or a testimonial from a
+                customer. Maybe it's just filling up space, or maybe
+                people will actually read it. Who knows? All i know
+                is that it looks nice.
+            </p>
+            <p class="author">-Thor, God of Thunder</p>
+        </div>  
+        
     </div>
     <div class="footer">
         <div class="left">
@@ -78,6 +81,9 @@
             </p>
         </div>
         <button>Sign up</button>
+    </div>
+    <div class="greater-footer">
+        <p>Copyright © The Odin Project 2021</p>
     </div>
 </body>
 </html>
